--- a/src/Front-end/Projeto Interdisciplinar/index.html
+++ b/src/Front-end/Projeto Interdisciplinar/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="./img/luizao-logo.jpeg" type="image/x-icon">
     <link rel="logo-luizao-icon" sizes="180x180" href="./img/luizao-logo.jpeg"/>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons.js"></script>
-    <script src="./script/"></script>
+    <script src="./script/script.js"></script>
 
     <title>Projeto Luizão Meninos da Sayb</title>
 </head>
